--- a/config2024.json
+++ b/config2024.json
@@ -33,6 +33,7 @@
   "autoInstall": [
     "O1Library"
   ],
+  "alwaysShowGroups": true,
   "scalaRepl": {
     "initialCommands": {
       "Adventure": [
