--- a/courses.yaml
+++ b/courses.yaml
@@ -1,12 +1,12 @@
 - name: O1 2023 Test
-  semester: Fall 2023
+  semester: Autumn 2023
   url: https://raw.githubusercontent.com/jaakkonakaza/temp/main/config.json
   language: scala
 - name: O1 2024 Test
-  semester: Fall 2024
-  url: https://raw.githubusercontent.com/jaakkonakaza/temp/main/config2024.json
+  semester: Autumn 2024
+  url: https://gitmanager.cs.aalto.fi/static/O1_2024/modules/o1_course_config.json
   language: scala
 - name: CS-A1143 Data Structures and Algorithms Test
-  semester: Fall 2023
-  url: https://raw.githubusercontent.com/jaakkonakaza/temp/main/config2.json
+  semester: Autumn 2023
+  url: https://gitmanager.cs.aalto.fi/static/CS-A1141_2024Autumn/_static/apluscourses/a1141_course_config.json
   language: python
